--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "vant": "^2.2.13",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
