--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
     "vant": "^2.2.13",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
